<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/activity_main_background_image"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/alert_dialog_boxes1" />

    <Button
        android:id="@+id/buttonForAlertDialogBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:text="@string/alert_dialog_box_1" />

    <Button
        android:id="@+id/buttonForAlertDialogBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/alert_dialog_box_2" />

    <Button
        android:id="@+id/buttonForAlertDialogBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/alert_dialog_box_3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="320sp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/com_ritikcoder" />

</LinearLayout>